# rustyrender

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: lesson1.rs  lesson2.rs  lesson3.rs
src/: lib.rs  main.rs
src/geometry/: mod.rs  triangle.rs  types.rs
