[package]
name = "rustyrender"
version = "0.1.0"
authors = ["Matt Oswalt <matt@oswalt.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
num-complex = "0.2.4"
tobj = "2.0.0"
log = "0.4.8"

[profile.dev]
debug = true
